// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add console logs 1`] = `
"
// sitrep
function bar () {
  var a = 'foo'
  const b = 'bar'
  let c = [a, b].map(x => x.charAt(0))
  console.log('h')
  return c.join('-')
}

      ↓ ↓ ↓ ↓ ↓ ↓

// sitrep
function bar() {
  console.log('function: bar');

  var a = 'foo';
  console.log('a', a);
  const b = 'bar';
  console.log('b', b);
  let c = [a, b].map(x => x.charAt(0));
  console.log('c', c);
  console.log('h');

  var __$returnValue = c.join('-');

  console.log('Return Value:', __$returnValue);
  return __$returnValue;
}
"
`;

exports[`should not add console logs 1`] = `
"
function bar () {
  var a = 'foo'
  const b = 'bar'
  let c = [a, b].map(x => x.charAt(0))
  console.log('h')
  return c.join('-')
}

      ↓ ↓ ↓ ↓ ↓ ↓

function bar() {
  var a = 'foo';
  const b = 'bar';
  let c = [a, b].map(x => x.charAt(0));
  console.log('h');
  return c.join('-');
}
"
`;
